--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,23 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.gridgain</groupId>
+            <artifactId>gridgain-fabric</artifactId>
+            <!-- Replace the artifact above with the commented one if Enterprise Edition is used. -->
+            <!--
+            <artifactId>gridgain-fabric-ent</artifactId>
+            -->
+            <version>RELEASE</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.yardstickframework.gridgain</groupId>
+            <artifactId>yardstick-gridgain</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-core</artifactId>
             <version>${project.version}</version>
